--- a/src/pages/zh/musings/index.astro
+++ b/src/pages/zh/musings/index.astro
@@ -43,7 +43,7 @@ const getMusingTitleTransitionName = (id: string) =>
                   {formatDate(post.data.date, lang)}
                 </time>
                 <span
-                  class="text-stone-700 transition-colors duration-200 dark:text-stone-300 group-hover:text-stone-900 dark:group-hover:text-white"
+                  class="list-title text-stone-700 transition-colors duration-200 dark:text-stone-300 group-hover:text-stone-900 dark:group-hover:text-white"
                   style={`view-transition-name: ${getMusingTitleTransitionName(
                     post.id,
                   )};`}
