--- a/src/components/pages/PostsIndex.astro
+++ b/src/components/pages/PostsIndex.astro
@@ -22,8 +22,8 @@ const getPostTitleTransitionName = (slug: string, currentLang: Lang) =>
 
 <Layout title={copy.title} description={copy.description}>
   <main class="flex flex-1 justify-center px-6 py-16 md:px-12">
-    <div class="max-w-xl w-full space-y-10">
-      <header class="fade-in-up" style="animation-delay: 80ms">
+    <div class="max-w-xl w-full space-y-10 fade-in-up posts-index">
+      <header style="animation-delay: 80ms">
         <h1
           class="text-3xl text-stone-900 font-700 tracking-tight font-serif md:text-4xl dark:text-white"
         >
@@ -31,7 +31,7 @@ const getPostTitleTransitionName = (slug: string, currentLang: Lang) =>
         </h1>
       </header>
 
-      <ul class="fade-in-up space-y-1" style="animation-delay: 160ms">
+      <ul class="space-y-1" style="animation-delay: 160ms">
         {
           posts.map((post) => (
             <li>
@@ -43,7 +43,7 @@ const getPostTitleTransitionName = (slug: string, currentLang: Lang) =>
                   {formatDate(post.data.date, lang)}
                 </time>
                 <span
-                  class="text-stone-700 font-serif transition-colors duration-200 dark:text-stone-300 group-hover:text-stone-900 dark:group-hover:text-white"
+                  class="list-title text-stone-700 font-serif transition-colors duration-200 dark:text-stone-300 group-hover:text-stone-900 dark:group-hover:text-white"
                   style={`view-transition-name: ${getPostTitleTransitionName(
                     post.slug,
                     lang,
