refactor: extract hardcoded language prefix to dynamic i18n config
- Add getAllLangPrefixes() utility to i18n/utils.ts
- Refactor Layout.astro to use stripLangPrefix() for path detection
- Add isDetailToList() for disabling list animation on back navigation
- Add is:inline directive to scripts with attributes (Astro requirement)

--- a/src/components/pages/Home.astro
+++ b/src/components/pages/Home.astro
@@ -24,6 +24,7 @@ const schema = {
 
 <Layout title={copy.title} description={copy.description}>
   <script
+    is:inline
     slot="head"
     type="application/ld+json"
     set:html={JSON.stringify(schema)}
