--- a/src/pages/zh/musings/[slug].astro
+++ b/src/pages/zh/musings/[slug].astro
@@ -45,6 +45,7 @@ const titleTransitionName = getMusingTitleTransitionName(post.id)
   updatedDate={post.data.updatedAt}
 >
   <script
+    is:inline
     slot="head"
     type="application/ld+json"
     set:html={JSON.stringify({
