--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,12 +12,8 @@ const translatePath = useTranslatedPath(lang)
 ---
 
 <Layout title={t('notFound.title')}>
-  <main
-    class="fade-in-up flex flex-1 flex-col items-center justify-center px-6 py-16"
-  >
-    <h1
-      class="text-8xl text-stone-200 font-bold font-serif dark:text-stone-800"
-    >
+  <main class="fade-in-up flex flex-1 flex-col items-center justify-center px-6 py-16">
+    <h1 class="text-8xl text-stone-200 font-bold font-serif dark:text-stone-800">
       404
     </h1>
     <p class="mt-4 text-lg text-stone-600 dark:text-stone-400">
